2012-10-17  Anders Carlsson  <andersca@apple.com>

        Always use fastRealloc when growing or shrinking the Vector buffer
        https://bugs.webkit.org/show_bug.cgi?id=99616

        Reviewed by Andreas Kling.

        Remove the pointless #if PLATFORM(BLACKBERRY) and always try to use fastRealloc to grow or shrink the
        vector buffer when possible; realloc should always be at least as fast as free+malloc.

        * wtf/Vector.h:
        (WTF::VectorBufferBase::shouldReallocateBuffer):

2012-10-16  Michael Saboff  <msaboff@apple.com>

        Change WTF_USE_8BIT_TEXTRUN to ENABLE_8BIT_TEXTRUN
        https://bugs.webkit.org/show_bug.cgi?id=99484

        Reviewed by Eric Seidel.

        Changed macro name to align with it's purpose.

        * wtf/Platform.h:

2012-10-16  Michael Saboff  <msaboff@apple.com>

        StringImpl::reverseFind() with a single match character isn't optimal for mixed 8/16 bit cases
        https://bugs.webkit.org/show_bug.cgi?id=99363

        Reviewed by Benjamin Poulain.

        Factored out the 8/16 bitness check of the match character from the subject character bitness
        check.  Did this for both find() and reverseFind().  Added all UChar/LChar combinations to the
        inline reverseFind().

        * wtf/text/StringImpl.cpp:
        (WTF::StringImpl::find):
        (WTF::StringImpl::reverseFind):
        * wtf/text/StringImpl.h:
        (WTF::reverseFind):

2012-10-16  Dima Gorbik  <dgorbik@apple.com>

        Remove Platform.h include from the header files.
        https://bugs.webkit.org/show_bug.cgi?id=98665

        Reviewed by Eric Seidel.

        We don't want other clients that include WebKit headers to know about Platform.h.

        * wtf/Assertions.h:
        * wtf/MainThread.h:

2012-10-16  Adrienne Walker  <enne@google.com>

        Remove unused WTF_NEW_HASHMAP_ITERATORS_INTERFACE #define
        https://bugs.webkit.org/show_bug.cgi?id=99367

        Reviewed by James Robinson.
