@@ -1,3 +1,15 @@
+2012-10-17  Michael Saboff  <msaboff@apple.com>
+
+        AtomicString::HashAndUTF8CharactersTranslator::equal() doesn't optimally handle 8 bit strings
+        https://bugs.webkit.org/show_bug.cgi?id=99223
+
+        Reviewed by Geoffrey Garen.
+
+        Added an 8 bit path.
+
+        * wtf/text/AtomicString.cpp:
+        (WTF::HashAndUTF8CharactersTranslator::equal):
+
 2012-10-17  Anders Carlsson  <andersca@apple.com>
 
         Always use fastRealloc when growing or shrinking the Vector buffer
